added few more games

--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
                     <p class="para-desc">Test your luck in "High or Low?" by guessing if the next card drawn will be higher or lower than the current one. Place your bets and watch as the game unfolds with each turn! If you guess correctly, your winnings increase, but make a wrong call, and its game over. Can you beat the odds and emerge victorious?</p>
                     <a href="highlowcard.html" class="play-button">Play Now</a>
                 </div>
+                <div class="game-card">
+                    <h3>Tic-Tac-Toe</h3>
+                    <img src="tictactoelogo.png" alt="Game Title 3">
+                    <p class="para-desc">This Tic-Tac-Toe game is a stylish, modern take on the classic. Players alternate marking Xs and Os in a 3x3 grid, aiming to align three in a row to win. With a sleek black, green, and gold theme, it's quick, interactive, and easy to restart for endless fun.</p>
+                    <a href="tictactoe.html" class="play-button">Play Now</a>
+                </div>
+                <div class="game-card">
+                    <h3>Minesweeper</h3>
+                    <img src="minesweeperlogo.png" alt="Game Title 3">
+                    <p class="para-desc">This Minesweeper game features a sleek black, gold, and green theme. Players reveal cells to avoid mines, marking potential ones with limited flags. Clear the board strategically without triggering a mine to win!</p>
+                    <a href="minesweeper.html" class="play-button">Play Now</a>
+                </div>
+                <div class="game-card">
+                    <h3>Rock! Paper! Scissor!</h3>
+                    <img src="rockpaperscissor.png" alt="Game Title 3">
+                    <p class="para-desc">This Rock, Paper, Scissors game features an engaging black, gold, and green theme, utilizing emojis for the choices: 🪨 Rock, 📄 Paper, and ✂️ Scissors. Players compete against the computer, with the outcome displayed after each round. Simple and fun, it offers an interactive way to enjoy this classic game!</p>
+                    <a href="rockpaperscissor.html" class="play-button">Play Now</a>
+                </div>
                 <!-- Add more game cards as needed -->
             </div>
         </section>
